client/public/main.css
@import url('https://fonts.googleapis.com/css?family=ZCOOL+XiaoWei&display=swap');


a.bg-light:focus, a.bg-light:hover, button.bg-light:focus, button.bg-light:hover {
    outline: 0!important;
    background-color: #f8f9fa!important;
}

* {
    font-family: 'ZCOOL XiaoWei', serif;
}

.nav-item {
    min-height: 42px;
}

.logo {
    transform: scale(.23);
    border-radius: 50%;
    position: absolute;
    top: -126px;
    left: -100px;
}

html {
    overflow-y: scroll;
}

html,
body {
    background-color: #f8f9fa!important;
}

.navbar {
    height: 60px!important;
}

.text-primary {
    color: rgb(7, 58, 112)!important;
}

.vertical-nav {
    min-width: 15rem;
    width: 15rem;
    height: calc(100vh - 60px);
    position: fixed;
    top: 60px;
    left: 0;
    box-shadow: .125rem .125rem .25rem rgba(0, 0, 0, 0.075);
    transition: all 0.4s;
}
  
.page-content {
    width: calc(100% - 15rem);
    margin-left: 15rem;
    transition: all 0.4s;
}
  
#sidebar.dashboard-active {
    margin-left: -15rem;
}
  
#content.dashboard-active {
    width: 100%;
    margin: 0;
}

#map {
    position: fixed;
    width: 100%;
    height: calc(100vh - 60px);
}

.card {
    width: 100%;
}

.markerbtn {
    background: none;
    border: none;
}

.marker {
    background: #fff;
    border-radius: 50% 50% 50% 0;
    border: 4px solid #007bff;
    width: 32px;
    height: 32px;
    transform: rotate(-45deg);
}
  
.marker::after {
    position: absolute;
    content: '';
    width: 16px;
    height: 16px;
    border-radius: 50%;
    top: 50%;
    left: 50%;
    margin-left: -8px;
    margin-top: -8px;
    background-color: rgb(7, 58, 112);
}

.marker-card-text {
    position: relative;
    top: -27px;
    left: 4px;
}

.btn-primary {
    border: 2px solid rgb(7, 58, 112);
    transition: all 250ms ease-in-out;
}

.btn-primary:hover {
    border: 2px solid rgb(7, 58, 112);
    background-color: rgb(7, 58, 112);
    color: white;
    transition: all 250ms ease-in-out;
}

.btn-outline-primary {
    border: 2px solid rgb(7, 58, 112);
    color: rgb(7, 58, 112);
    transition: all 250ms ease-in-out;
}

.btn-outline-primary:hover {
    border: 2px solid rgb(7, 58, 112);
    background-color: rgb(7, 58, 112);
    color: white;
    transition: all 250ms ease-in-out;
}

.outline {
    border: 2px solid rgb(7, 58, 112);
    height: 44px;
    overflow-x: hidden;
    overflow-y: hidden;
    border-radius: .25rem;
    color: rgb(7, 58, 112);
    transition: all 250ms ease-in-out;
}

.outline:hover {
    background-color: rgb(7, 58, 112);
    color: white;
    transition: all 250ms ease-in-out;
}

.input-photos {
    max-width: 220px;
}

.fa-times,
.fa-check {
    position: relative;
    top: 5px;
    font-size: 1.8rem;
}

.form-row {
    margin-right: 0;
    margin-left: 0;
}

.fix-messages {
    margin-bottom: -6px;
}

#sidebar {
    overflow-y: scroll;
    scrollbar-width: none;
    -ms-overflow-style: none;
}

#sidebar::-webkit-scrollbar {
    width: 0;
    height: 0;
}

.fixed-map {
    margin-top: 60px;
    max-width: 66.67%;
    z-index: 1;
}

.map-view {
    position: absolute;
    bottom: 20px;
    right: 0;
    z-index: 1;
}

.map-reset {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 1;
}

.carousel-indicators {
    position: relative;
}

.carousel-indicators li {
    width: 80px;
    min-width: 80px;
    max-width: 80px;
    height: 50px;
}

.no-border {
    border: none!important;
}

.home {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url("./home.jpg");
    background-size: cover;
    background-position-y: 40%;
    background-attachment: fixed;
    opacity: 0.4;
    z-index: 0;
}

.home-header {
    position: relative;
    margin-top: calc(25vh - 60px);
    font-size: 7rem;
    opacity: 1;
    background-color: transparent;
}

.home-header2 {
    font-size: 4rem;
    margin-top: 0;
}

#collapseExample {
    position: absolute;
    top: 40px;
    left: 0;
    z-index: 1;
    background-color: white;
}

.toggleBtn {
    width: 196px;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
}

.map-zoomIn {
    position: absolute;
    bottom: 125px;
    right: 0;
    z-index: 1;
    width: 35px;
    text-align: center;
}

.map-zoomOut {
    position: absolute;
    bottom: 83px;
    right: 0;
    z-index: 1;
    width: 35px;
    text-align: center;
}

.dashboard-btn {
    width: 100%;
    text-align: left;
    background-color: inherit;
    border: none;
}

.reset-margin {
    margin-left: 0!important;
    margin-right: 0!important;
}

.active {
    border-bottom: 2px solid rgb(7, 58, 112);
    padding-bottom: 0;
    margin-bottom: 6px;
}

.selector {
    margin-left: 1rem;
}

.custom-toggler.navbar-toggler {
    border: none;
}

.custom-toggler .navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(7,58,112,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

.nav-link {
    font-size: 1em;
    letter-spacing: 1px;
    text-transform: uppercase;
    color: rgb(7, 58, 112)!important;
    padding-left: 0;
    padding-right: 0;
}

.nav-link:after {
    display: block;
    content: '';
    border-bottom: 2px solid rgb(7, 58, 112);
    transform: scaleX(0);
    transition: transform 300ms ease-in-out;
    position: relative;
    top: 2px;
}

.nav-link:hover:after,
.dropdown-toggle:hover:after {
    transform: scaleX(1);
}

.brand-fix,
.brand-fix:hover {
    position: absolute;
    width: 0;
    height: 0;
    color: inherit;
    text-decoration: none;
    color: rgb(7, 58, 112);
}

.xxl-btns {
    position: absolute;
    bottom: 1rem!important;
    width: 95%;
    max-height: 84px;
}

input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
    border: 1px solid #ced4da;
    -webkit-text-fill-color: rgb(7, 58, 112);
    -webkit-box-shadow: 0 0 0px 1000px white inset;
    transition: background-color 0s ease-in-out 0s;
}

.mobile-mb {
    margin-bottom: 40px;
}

@media (max-width: 575px) {
    .home-header {
        font-size: 4.2rem;
    }
    
    .home-header2 {
        font-size: 2.4rem;
    }

    .carousel-item img {
        height: 240px;
    }

    .navbar-collapse {
        background-color: #f8f9fa;
        min-width: 100vw;
        position: absolute;
        left: 0;
        top: 60px;
        text-align: center;
    }

    .mobile-mb {
        margin-bottom: 80px;
    }
}

@media (max-width: 767px) and (min-width: 576px) {
    .carousel-item img {
        height: 360px;
    }

    .navbar-collapse {
        background-color: #f8f9fa;
        min-width: 100vw;
        position: absolute;
        left: 0;
        top: 60px;
        text-align: center;
    }

    .mobile-mb {
        margin-bottom: 80px;
    }
}

@media (max-width: 991px) and (min-width: 768px) {
    .navbar-collapse {
        background-color: #f8f9fa;
        min-width: 100vw;
        position: absolute;
        left: 0;
        top: 60px;
        text-align: center;
    }

    .carousel-item img {
        height: 400px;
    }
}

@media (min-width: 992px) {
    .carousel-item img {
        height: calc(70vh);
        max-height: 500px;
    }

    .navbar-brand.abs
    {
        position: absolute;
        width: 100%;
        left: 0;
        text-align: center;
        z-index: 0;
        height: 0;
    }

    .navbar-nav {
        z-index: 1;
    }

    .navbar-expand-lg .navbar-nav .nav-link {
        padding-right: 0;
        padding-left: 0;
        margin: 0 0.8rem;
    }

    .logo {
        transform: scale(.45);
        border-radius: 50%;
        position: relative;
        top: -130px;
        left: -125px;
    }
}

